--- a/root/client/package.json
+++ b/root/client/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-stripe-checkout": "^2.6.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.5"
   },
   "devDependencies": {
