--- a/root/api/package.json
+++ b/root/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-jobs-api",
+  "name": "ecommerce-app",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,15 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.5",
-    "stripe": "^13.3.0"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "stripe": "^13.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
