--- a/root/api/package.json
+++ b/root/api/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "random-hex": "^1.0.2",
     "stripe": "^13.4.0"
   },
   "devDependencies": {
