--- a/root/client/package.json
+++ b/root/client/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
     "@reduxjs/toolkit": "^1.8.5",
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.1.1",
     "axios": "^1.5.0",
     "random-hex": "^1.0.2",
     "react": "^18.2.0",
