--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^7.0.1",
@@ -18,7 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "random-hex": "^1.0.2",
-    "stripe": "^13.4.0"
+    "stripe": "^13.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
