--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,17 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
-    "@mui/material": "^5.14.8",
+    "@mui/material": "^5.14.9",
+    "@mui/x-data-grid": "^6.14.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.5",
     "axios": "^1.5.0",
+    "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
-    "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
