--- a/backend/package.json
+++ b/backend/package.json
@@ -4,22 +4,23 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "run dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "fs": "^0.0.1-security",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.5.2",
     "random-hex": "^1.0.2",
-    "stripe": "^13.5.0"
+    "stripe": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
