--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "run dev": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "engines": {
     "node": ">=14.20.1"
