--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.8",
-    "@mui/material": "^5.14.9",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@mui/x-data-grid": "^6.14.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-js": "^2.1.5",
@@ -20,6 +20,7 @@
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
