--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
