--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -11,24 +12,24 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-winston": "^4.2.0",
     "express-async-errors": "^3.1.1",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.3.1",
-    "express-validator": "^7.0.1",
     "fs": "0.0.1-security",
-    "helmet": "^7.1.0",
-    "http-status-codes": "^2.3.0",
+    "helmet": "^8.0.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.2",
+    "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
+    "sequelize": "^6.37.5",
     "morgan": "^1.10.0",
-    "random-hex": "^1.0.2",
-    "stripe": "^13.6.0",
-    "xss-clean": "^0.1.4"
+    "stripe": "^13.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.9"
   }
 }
