--- a/backend/package.json
+++ b/backend/package.json
@@ -16,18 +16,21 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.5.0",
     "express-winston": "^4.2.0",
-    "express-async-errors": "^3.1.1",
     "fs": "0.0.1-security",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3",
+    "pg": "^8.14.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "morgan": "^1.10.0",
-    "stripe": "^13.11.0"
+    "stripe": "^13.11.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
