--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
   "scripts": {
     "dev": "nodemon index.js",
     "format": "prettier --write .",
+    "seed": "node scripts/seedProducts.js",
     "start": "node index.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "@u3u/prettier-config": "^5.2.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.0",
