--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,23 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "target": "es2017",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true
+      "baseUrl": ".",
+      "module": "ESNext",
+      "moduleResolution": "bundler",
+      "paths": {
+          "@/*": ["./src/*"]
+      },
+      "target": "ES2020"
   },
-  "include": ["src/**/*.js", "src/**/*.jsx"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
