--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,13 @@
 {
   "builds": [
     {
+      "config": {
+        "includeFiles": [
+          "node_modules/**",
+          "package.json",
+          "package-lock.json"
+        ]
+      },
       "src": "index.js",
       "use": "@vercel/node"
     }
