Enhance logging configuration and update Vercel deployment settings: modify logger to conditionally include file transports based on environment, improve log formatting, and add file exclusions in vercel.json for deployment.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,10 +2,18 @@
   "builds": [
     {
       "config": {
+        "excludeFiles": [
+          "logs/**",
+          "*.log"
+        ],
         "includeFiles": [
           "node_modules/**",
           "package.json",
-          "package-lock.json"
+          "package-lock.json",
+          "config/**",
+          "models/**",
+          "routes/**",
+          "middlewares/**"
         ]
       },
       "src": "index.js",
