Refactor CORS configuration in backend: replace middleware with custom headers for improved clarity and control over allowed origins, methods, and headers. Update Vercel routes to include CORS headers for API responses.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,10 +2,6 @@
   "builds": [
     {
       "config": {
-        "excludeFiles": [
-          "logs/**",
-          "*.log"
-        ],
         "includeFiles": [
           "node_modules/**",
           "package.json",
@@ -20,13 +16,36 @@
       "use": "@vercel/node"
     }
   ],
+
   "routes": [
     {
       "dest": "index.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      },
+      "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "DELETE",
+        "PATCH",
+        "OPTIONS"
+      ],
       "src": "/api/(.*)"
     },
     {
       "dest": "index.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      },
+      "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "DELETE",
+        "PATCH",
+        "OPTIONS"
+      ],
       "src": "/(.*)"
     }
   ],
